# Polyhedron

./: CMakeLists.txt  README.md
AffineChecker/: CMakeLists.txt  README.md
AffineChecker/cmake/Modules/: FindISL.cmake
AffineChecker/src/: affineGen.cpp  polyhedralBuilder.cpp  polyhedralBuilder.hpp
AffineChecker/test/: test.cpp
CodeGen/: CMakeLists.txt
CodeGen/src/: main.cpp
src/: affineGen.cpp  affineGen.hpp  main.cpp  old.cpp  polyhedralBuilder.cpp  polyhedralBuilder.hpp
test/: test.cpp
